--- a/src/index.css
+++ b/src/index.css
@@ -7,21 +7,25 @@ body {
 }
 
 .dark {
-  --background: 0, 0, 0;        /* #000000 */
-  --textColor: 255, 255, 255;   /* #FFFFFF */
-  --borderColor: 255, 255, 255; /* #FFFFFF */
-  --borderAccent: 47, 71, 148;  /* #2F4794 */
-  --links: 255, 255, 255;       /* #FFFFFF */
-  --linksHover: 255, 255, 255;  /* #FFFFFF */
-  --svg: 255, 255, 255;         /* #FFFFFF */
+  --background: 0, 0, 0;              /* #000000 */
+  --textColor: 255, 255, 255;         /* #FFFFFF */
+  --borderColor: 255, 255, 255;       /* #FFFFFF */
+  --borderAccent: 47, 71, 148;        /* #2F4794 */
+  --links: 255, 255, 255;             /* #FFFFFF */
+  --linksHover: 255, 255, 255;        /* #FFFFFF */
+  --svg: 255, 255, 255;               /* #FFFFFF */
+  --buttonColor: 255, 255, 255;       /* #FFFFFF */
+  --buttonAccentColor: 63, 117, 198;  /* #3F75C6 */
 }
 
 .light {
-  --background: 255, 255, 255;  /* #000000 */
-  --textColor: 0, 0, 0;         /* #FFFFFF */
-  --borderColor: 0, 0, 0;       /* #FFFFFF */
-  --borderAccent: 47, 71, 148;  /* #2F4794 */
-  --links: 0, 0, 0;             /* #FFFFFF */
-  --linksHover: 0, 0, 0;        /* #FFFFFF */
-  --svg: 0, 0, 0;               /* #FFFFFF */
+  --background: 255, 255, 255;        /* #FFFFFF */
+  --textColor: 0, 0, 0;               /* #000000 */
+  --borderColor: 0, 0, 0;             /* #000000 */
+  --borderAccent: 47, 71, 148;        /* #2F4794 */
+  --links: 0, 0, 0;                   /* #000000 */
+  --linksHover: 0, 0, 0;              /* #000000 */
+  --svg: 0, 0, 0;                     /* #000000 */
+  --buttonColor: 225, 225, 225;       /* #E1E1E1 */
+  --buttonAccentColor: 63, 117, 198;  /* #3F75C6 */
 }
